[package]
name = "dungeon-generator"
version = "0.1.0"
edition = "2021"
authors = ["Katerina Shananina <serpent.k@gmail.com>"]

[dependencies]
dungeon-models = { path = "dungeon-models" }
generator = { path = "generator" }
pancurses = "0.17.0"

[workspace]
members = [
    "dungeon-models",
    "generator",
]